Archivos integracion SIN creados

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,28 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.0.0</version>
+            <executions>
+                <execution>
+                    <id>compile-csharp</id>
+                    <phase>compile</phase>
+                    <goals>
+                        <goal>exec</goal>
+                    </goals>
+                    <configuration>
+                        <executable>msbuild</executable>
+                        <workingDirectory>${project.basedir}/src/main/csharp</workingDirectory>
+                        <arguments>
+                            <argument>/p:Configuration=Release</argument>
+                            <argument>/t:Rebuild</argument>
+                        </arguments>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
